Fix styling for active menu - currently font color made it invisible.

--- a/web-ui/src/main/resources/catalog/style/srv_custom_style.less
+++ b/web-ui/src/main/resources/catalog/style/srv_custom_style.less
@@ -46,6 +46,12 @@ p {
 a {
     color: #000;
 }
+a.list-group-item.active,
+a.list-group-item.active:hover,
+a.list-group-item.active:focus {
+  color: #555;
+  font-weight: bold;
+}
 
 /* ==================== */
 /* Surchage de Boostrap */
